agent9527-rs/tui/src/chatwidget/snapshots/agent9527_tui__chatwidget__tests__update_popup.snap
---
source: tui/src/chatwidget/tests.rs
expression: terminal.backend().vt100().screen().contents()
---
  ✨ New version available! Would you like to update?

  Full release notes: https://github.com/openai/agent9527/releases/latest


› 1. Yes, update now
  2. No, not now
  3. Don't remind me

  Press enter to confirm or esc to go back
