agent9527-rs/tui/src/chatwidget/snapshots/agent9527_tui__chatwidget__tests__windows_sandbox_required_enable_prompt.snap
---
source: tui/src/chatwidget/tests/permissions.rs
expression: "render_bottom_popup(&chat, 120)"
---
  Your organization requires the default Agent9527 agent sandbox to continue. Set it up to protect your files and
  control network access.
  Learn more <https://developers.openai.com/agent9527/windows>

› 1. Set up default sandbox (requires Administrator permissions)
  2. Quit

  Press enter to confirm or esc to go back
